[gd_scene load_steps=3 format=3 uid="uid://bfa2k80hehn4o"]

[ext_resource type="Script" path="res://src/client/main.gd" id="1_6kpxg"]
[ext_resource type="Texture2D" uid="uid://dnfii75r70dnu" path="res://assets/textures/crosshair161.png" id="2_gq47b"]

[node name="Main" type="Node"]
script = ExtResource("1_6kpxg")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="CenterContainer" parent="UI"]
anchors_preset = -1
anchor_right = 0.999
anchor_bottom = 0.995
offset_right = 0.151855
offset_bottom = 0.239929

[node name="YouDiedLabel" type="Label" parent="UI/HUD"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Lol you ded"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Crosshair" type="TextureRect" parent="UI/HUD"]
visible = false
layout_mode = 2
texture = ExtResource("2_gq47b")

[node name="MainMenu" type="PanelContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.5
offset_top = -162.0
offset_right = 328.5
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="UI/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="NameEdit" type="LineEdit" parent="UI/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 10.0
placeholder_text = "Player name"
alignment = 1
max_length = 20

[node name="ColorPickerButton" type="ColorPickerButton" parent="UI/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Click to change color"
color = Color(0.678431, 0.929412, 0.878431, 1)
edit_alpha = false

[node name="HSeparator" type="HSeparator" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="AddressEdit" type="LineEdit" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Address to join"
alignment = 1
max_length = 20

[node name="JoinButton" type="Button" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Level" type="Node" parent="."]

[node name="LevelSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://src/shared/levels/test_level/test.tscn")
spawn_path = NodePath("../Level")
spawn_limit = 1

[connection signal="button_down" from="UI/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_button_down"]
[connection signal="button_down" from="UI/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_button_down"]
